2004-10-11  Bob Halley  <halley@dnspython.org>

	* dns/message.py: Added make_response(), which creates a skeletal
	response for the specified query.  Added opcode() and set_opcode()
	convenience methods to the Message class.  Added the request_payload
	attribute to the Message class.

2004-10-10  Bob Halley  <halley@dnspython.org>

	* dns/zone.py (from_xfr): dns.zone.from_xfr() in relativization
	mode incorrectly set zone.origin to the empty name.

2004-09-02  Bob Halley  <halley@dnspython.org>

	* dns/name.py (Name.to_wire): The 'file' parameter to
	Name.to_wire() is now optional; if omitted, the wire form will
	be returned as the value of the function.

2004-08-14  Bob Halley  <halley@dnspython.org>

	* dns/message.py (Message.find_rrset): find_rrset() now uses an
	index, vastly improving the from_wire() performance of large
	messages such as zone transfers.

2004-08-07  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.2 released)

2004-08-04  Bob Halley  <halley@dnspython.org>

	* dns/query.py: sending queries to a nameserver via IPv6 now
	works.
	
	* dns/inet.py (af_for_address): Add af_for_address(), which looks
	at a textual-form address and attempts to determine which address
	family it is.

	* dns/query.py: the default for the 'af' parameter of the udp(),
	tcp(), and xfr() functions has been changed from AF_INET to None,
	which causes dns.inet.af_for_address() to be used to determine the
	address family.  If dns.inet.af_for_address() can't figure it out,
	we fall back to AF_INET and hope for the best.

2004-07-31  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/NSEC.py (NSEC.from_text): The NSEC text format
	does not allow specifying types by number, so we shouldn't either.

	* dns/renderer.py: the renderer module didn't import random,
	causing an exception to be raised if a query id wasn't provided
	when a Renderer was created.

	* dns/resolver.py (Resolver.query): the resolver wasn't catching