@@ -170,6 +170,7 @@ txt09			TXT	"foo\010bar"
 txt10			TXT	"foo bar"
 txt11			TXT	"\"foo\""
 txt12			TXT	"\"foo\""
+txt13			TXT	foo
 $TTL 300	; 5 minutes
 u			TXT	"txt-not-in-nxt"
 $ORIGIN u.example.
